Fix modal z-index

--- a/src/components/modal/Modal.pcss
+++ b/src/components/modal/Modal.pcss
@@ -8,6 +8,7 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  z-index: 1;
   top: 0;
   transition: background 0.2s ease-out;
   
